2005-11-04  Lluis Sanchez Gual  <lluis@novell.com>    
	
	* MonoDevelop.Ide.Gui.Content/IEditable.cs: Added InsertText method.
	* MonoDevelop.Ide.Gui.Content/ITextBuffer.cs: Added
	GetPositionFromLineColumn method.
	
	* MonoDevelop.Ide.Gui/IdeStartup.cs:
	* MonoDevelop.Ide.Gui.Dialogs/SplashScreen.cs:
	* MonoDevelop.Ide.Gui.OptionPanels/ExternalToolPanel.cs: Fixed warnings.
	
	* MonoDevelop.Ide.Gui/Workbench.cs: Fix NRE when opening a file in an
	external editor.
	
2005-10-25  Lluis Sanchez Gual  <lluis@novell.com>    
	
	* MonoDevelop.Ide.Gui/Workbench.cs: Don't show the main window until
	all stored sizes have been restored.
	* MonoDevelop.Ide.Gui/IdeStartup.cs: Remove unnecessary progress steps.
	* MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs: It is not the responsibility
	of the layout to Show the workbench. Don't load the stored layout when
	attaching, since the pads won't restore to the correct size if the
	workbench does not already have the original size.
	* MonoDevelop.Ide.Gui/Ide.cs: Minor progress monitoring fixes.
	* MonoDevelop.Ide.Gui.Dialogs/SplashScreen.cs: Update the current task
	name in IProgressMonitor.EndTask ().
	
2005-10-20  Lluis Sanchez Gual  <lluis@novell.com>    
	
	* MonoDevelop.Ide.Gui/DefaultWorkbench.cs: Use icons-only toolbars in
	the IDE. There are too many buttons for icons-and-text.
	
2005-10-20  Lluis Sanchez Gual  <lluis@novell.com>  
	
	* MonoDevelop.Ide.Gui.OptionPanels/ExternalToolPanel.cs: Get the
	command name directly from the Gtk.Entry, since GNome.FileEntry
	adds the default namespace to it. Also update the tool data when
	the command changes. This fixes bug #75627.
	
2005-10-20  Lluis Sanchez Gual  <lluis@novell.com> 
	
	* MonoDevelop.Ide.Commands/ProjectCommands.cs:
	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectReferenceNodeBuilder.cs:
	* MonoDevelop.Ide.addin.xml:
	Added LocalCopyReference command for toggling the Local Copy property
	of references. Fixes bug #75409.
	
2005-10-20  Lluis Sanchez Gual  <lluis@novell.com>
	